networking/external-access-static-host-based/ingress-service-hostbased-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-with-sni
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - mybrokerprefix0.my.domain
        - mybrokerprefix1.my.domain
        - mybrokerprefix2.my.domain
        - mybrokerprefix.my.domain
  rules:
    - host: mybrokerprefix0.my.domain
      http:
        paths:
          - backend:
              serviceName: kafka-0-internal
              servicePort: 9092
    - host: mybrokerprefix1.my.domain
      http:
        paths:
          - backend:
              serviceName: kafka-1-internal
              servicePort: 9092
    - host: mybrokerprefix2.my.domain
      http:
        paths:
          - backend:
              serviceName: kafka-2-internal
              servicePort: 9092
    - host: mybrokerprefix.my.domain
      http:
        paths:
          - backend:
              serviceName: kafka-bootstrap
              servicePort: 9092
