networking/external-access-static-host-based/ingress-service-hostbased-other-components.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-without-sni
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - controlcenter.$DOMAIN
        - ksqldb.$DOMAIN
        - connect.$DOMAIN
  rules:
    - host: controlcenter.$DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: controlcenter-0-internal
                port: 
                  number: 9021
    - host: ksqldb.$DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ksqldb-bootstrap
                port: 
                  number: 8088
    - host: connect.$DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: connect-bootstrap
                port: 
                  number: 8083
