networking/external-access-static-host-based/ingress-service-hostbased_kubernetes_1_22.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-sni
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
        - kafka.$DOMAIN         #Replace $DOMAIN with your domain
        - b0.$DOMAIN
        - b1.$DOMAIN
        - b2.$DOMAIN
        - controlcenter.$DOMAIN
        - ksqldb.$DOMAIN
        - connect.$DOMAIN
  rules:
  - host: kafka.$DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-bootstrap
            port:
              number: 9092
  - host: b0.$DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-0-internal
            port:
              number: 9092
  - host: b1.$DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-0-internal
            port:
              number: 9092
  - host: b2.$DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-0-internal
            port:
              number: 9092
  - host: controlcenter.$DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: controlcenter-0-internal
            port:
              number: 9021
  - host: ksqldb.$DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  ksqldb-bootstrap
            port:
              number: 8088
  - host: connect.$DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  connect-bootstrap
            port:
              number: 8083
